--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ body {
   width: 700px;
   margin: 20vh auto;
   text-align: center;
+  background: none;
+  position: relative;
 }
 
 h1 {
@@ -46,4 +48,47 @@ p {
 img {
   width: 150px;
   height: 150px;
+}
+
+.hidden {
+  display: none;
+}
+
+.start-btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 70%;
+
+  background-color: #000;
+  z-index: 10;
+  box-shadow: 0 30px 50px rgba(0, 0, 0, 0.3);
+  color: #fff;
+  font-size: 50px;
+  width: 500px;
+  border-radius: 20px;
+  letter-spacing: 3px;
+  /* font-weight: bold; */
+  height: 100px;
+  border: 3px solid #fff;
+}
+
+.start-btn:hover {
+  border: 3px solid #000;
+  cursor: pointer;
+  background-color: #fff;
+  color: #000;
+  transition: 0.3s;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(10px);
+  z-index: 5;
 }
